# kanso

./: .clang-format  .clang-tidy  .env.cmake  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/cube/: cube.blend  cube.mtl
assets/royal_chair/: CadeiraMadeiraFASE1.fbx
cfg/: default_scene.json  window.json
include/: app.h  app.hpp  camera.h  camera.hpp  control.h  core.hpp  custom_logger.h  directional_light.h  drawable.hpp  event_system.hpp  exception.hpp  file.h  glfw_context.h  gui.hpp  input_system.hpp  keys.h  light.h  light.hpp  loaded_model.h  loaded_model.hpp  loader.hpp  mesh.h  mesh.hpp  model.h  model.hpp  model_data_loader.hpp  model_loader.h  object_manager.hpp  point_light.h  primitive.h  primitive.hpp  raycast.h  raycast.hpp  renderer.hpp  scene.h  scene.hpp  shader.h  shader.hpp  spot_light.h  starter.hpp  (+8 more)
include/glad/: glad.h
scene/: default_scene.json
shaders/: backpack.frag  backpack.vert  bounding_box.frag  bounding_box.vert  fragment.frag  light_cube.frag  light_cube.vert  line.frag  line.vert  outline.frag  outline.vert  vertex.vert
src/: app.c  app.cpp  camera.c  camera.cpp  control.c  core.cpp  directional_light.c  event_system.cpp  file.c  glad.c  glfw_camera.c  glfw_context.c  glfw_window.c  gui.cpp  input_system.cpp  light.c  light.cpp  loaded_model.c  loaded_model.cpp  loader.cpp  main.c  main.cpp  mesh.c  mesh.cpp  model.c  model.cpp  model_data_loader.cpp  model_loader.cpp  object_manager.cpp  point_light.c  primitive.c  primitive.cpp  printer.c  raycast.c  raycast.cpp  renderer.cpp  scene.c  scene.cpp  shader.c  shader.cpp  (+7 more)
